# EduVerse-AI-main-backend

./: README.md  pyproject.toml
app/: main.py
app/auth/: auth_service.py  dependencies.py
app/crud/: admins.py  assignment_submissions.py  assignments.py  courses.py  quizzes.py  student.py  subscription.py  teachers.py  users.py
app/crud/dashboards/: admin_dashboard.py
app/db/: database.py
app/routers/: admins.py  assignment_submissions.py  assignments.py  courses.py  quizzes.py  students.py  subscription.py  teachers.py  tenants.py
app/routers/auth/: admin_auth.py  login.py  teacher_auth.py
app/routers/dashboards/: admin_dashboard.py
app/routers/roles/: teachers.py
app/schemas/: admins.py  assignmentSubmissions.py  assignments.py  courses.py  quizzes.py  student.py  subscription.py  superAdmin.py  teachers.py  tenants.py
